# fp-artificiency

./: Cargo.toml  DESIGN.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
crates/artificiency-core/: Cargo.toml
crates/artificiency-core/examples/: backfill.rs  integrity.rs  limits.rs
crates/artificiency-core/src/: integrity.rs  lib.rs  plugins.rs  pricing.rs  schema.sql  store.rs
crates/artificiency-core/src/collectors/: claude_code.rs  limits.rs  mod.rs
docs/screenshots/: README.md
scripts/: bump-version.mjs  gen-icons.sh  gen-notes.mjs  release.mjs
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/: api.ts  presets.ts
src/lib/components/: BarChart.svelte  GhostPanel.svelte  InfoTip.svelte  PluginTimeline.svelte  RangeSelector.svelte  Sidebar.svelte  StatTile.svelte  UsageMeters.svelte
src/lib/dashboards/: Integrity.svelte  Overview.svelte  PluginImpact.svelte  Waste.svelte
