[package]
name = "fp-artificiency"
description = "Flarepoint | Artificial Efficiency — local-first AI usage analytics"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "fp_artificiency_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
artificiency-core = { path = "../crates/artificiency-core" }
tauri = { version = "2", features = [] }
serde = { workspace = true }
serde_json = { workspace = true }
